# Distributed-Gumbel-AlphaZero

./: .gitignore  AGENTS.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: connect_four.yaml  connect_four_cpu_debug.yaml  connect_four_gpu.yaml  connect_four_lan.yaml  connect_four_lan_fast.yaml  connect_four_lan_long.yaml
scripts/: benchmark_search.py  benchmark_selfplay.py  benchmark_train_step.py  bootstrap.ps1  bootstrap.py  bootstrap.sh
src/gumbel_az/: __init__.py  benchmark.py
src/gumbel_az/algorithms/: __init__.py  base.py  registry.py
src/gumbel_az/analysis/: inspect.py
src/gumbel_az/cli/: doctor.py  main.py
src/gumbel_az/config/: __init__.py  defaults.py  loader.py  overrides.py  schema.py
src/gumbel_az/domain/: __init__.py  algorithm.py  game.py  types.py
src/gumbel_az/envs/: __init__.py  base.py  gymnasium_adapter.py  pgx_adapter.py  registry.py
src/gumbel_az/eval/: __init__.py  arena.py  opponents.py  promotion.py
tests/: test_checkpoint_roundtrip.py  test_cli_smoke.py  test_config.py  test_connect_four_env.py  test_doctor.py  test_eval_arena.py  test_execution_lan_ray.py  test_execution_local_multiprocess.py  test_execution_single_process.py  test_game_adapter_contract.py  test_gumbel_algorithm.py  test_gumbel_search.py  test_inspect_benchmark.py  test_network_factory.py  test_play_session.py  test_q_transform.py  test_replay_roundtrip.py  test_resume.py  test_scheduler.py  test_selfplay_smoke.py  test_sequential_halving.py  test_storage_logging.py  test_torch_fallback.py  test_torch_runtime.py  test_trainer_smoke.py  test_training_step.py
(+57 files in other folders)
