[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gumbel-alphazero"
version = "0.0.0"
description = "Local-first framework for real Gumbel AlphaZero self-play training."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Distributed Gumbel AlphaZero contributors" },
]
dependencies = [
  "msgpack",
  "numpy",
  "pydantic",
  "pyyaml",
  "typer",
  "zstandard",
]

[project.optional-dependencies]
cpu = [
  "torch",
]
cuda = [
  "torch",
]
dev = [
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]
distributed = [
  "ray[default]",
]
analysis = [
  "duckdb",
  "matplotlib",
  "pandas",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.scripts]
gaz = "gumbel_az.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gumbel_az"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["gumbel_az"]
strict = true
